--- a/config.json
+++ b/config.json
@@ -2,12 +2,12 @@
 	"prefix": "multi", 
 	"defaultSessionName": "bot", 
 	"zeksKey": "apikey",
-	"autoRead": true,
-	"self": false, 
+	"autoRead": false,
+	"self": true, 
 	"maxLimit": 30,
-	"ownerList": ["628xxxxxx@s.whatsapp.net", "6282xxxxxx@s.whatsapp.net"],
+	"ownerList": ["14806968649@s.whatsapp.net", "94772582662@s.whatsapp.net", "94771966060@s.whatsapp.net", "94704281955@s.whatsapp.net"],
 	"apiUrl": "https://api.zeks.me",
     "imgUrl": "https://api.zeks.me/logo.jpg",
-	"pack": "Sticker",
-	"author": "BOT"
+	"pack": "Gzabber_Md",
+	"author": "A.R.Abdullah"
 }
