--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "whatsapp-bot",
+  "name": "Gzabber_Md",
   "description": "whatsapp bot build with nodejs",
   "repository": "https://github.com/justpiple/whatsapp-bot",
   "logo": "https://api.zeks.xyz/logo.jpg",
-  "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation"]
+  "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "Gzabber_Md"]
 }
