--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp-bot",
+  "name": "Gzabber_Md",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -32,7 +32,7 @@
     "type": "git",
     "url": "git+https://github.com/justpiple/whatsapp-bot.git"
   },
-  "author": "ben",
+  "author": "A.R.Abdullah",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/justpiple/whatsapp-bot/issues"
